<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/RtkAppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/AwesomeToolBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@null"
            app:titleTextAppearance="@style/ActionBar.TitleText">

        </com.google.android.material.appbar.MaterialToolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.slidingpanelayout.widget.SlidingPaneLayout
        android:id="@+id/slidePanelLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <!--        <fragment-->
        <!--            android:id="@+id/fragment_function"-->
        <!--            android:name="com.realsil.apps.bluetooth5.phone.longrange.LongRangeClientSettingsFragment"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.realsil.sdk.support.logger.LogView
                android:id="@+id/logView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toTopOf="@+id/bottomBar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/bottomBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/margin_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logView">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnScan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_start_scan" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCreateBond"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/button_create_bond" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRemoveBond"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/button_remove_bond" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnConnect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/button_remove_connect" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDisconnect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/button_remove_disconnect" />

            </LinearLayout>

        </LinearLayout>

    </androidx.slidingpanelayout.widget.SlidingPaneLayout>


</androidx.constraintlayout.widget.ConstraintLayout>